Update versions; separate data_dir; remove nginx